# ophidian

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
apps/cada001/: CMakeLists.txt  main.cpp
apps/cada001/wrapper/: wrapper.cpp  wrapper.h
apps/cell_legalization/: CMakeLists.txt  main.cpp
apps/ophidian_gui/: CMakeLists.txt
apps/ophidian_gui/control/: maincontroller.cpp  maincontroller.h
apps/r-tree_test/: CMakeLists.txt  main.cpp
apps/sfml_canvas/: CMakeLists.txt  main.cpp
apps/uddac2016/: CMakeLists.txt  application.cpp
apps/wrapper/: wrapper.cpp  wrapper.h
experiments/: CMakeLists.txt  histogram.R  input_files
experiments/iccad2017/: MultirowAbacusFixture.cpp  MultirowAbacusFixture.h  check_perturbation.cpp  generate_constraint_graph_after_iccad_legalization.cpp  generate_constraint_graph_for_rence_region.cpp  gurobiexperiment.cpp  iccad2015_wrapper.cpp  iccad2015_wrapper.h  iccad2017_wrapper.cpp  iccad2017_wrapper.h  measure_area_relationship.cpp  measure_bin_density.cpp  reading_contest_files.cpp  results_of_iccad2017_contest_winners.cpp  run_cell_shifting_in_iccad2017_contest_circuits.cpp  run_ilp_legalization.cpp  run_ilp_legalization_with_constraint_graph.cpp  run_legalization_fixing.cpp  run_legalization_fixing.h  run_row_assignment_in_iccad2017_contest_circuits.cpp  runmultirowabacusincontestcircuits.cpp
ophidian/: CMakeLists.txt
ophidian/circuit/: Def2LibraryMapping.cpp  Def2Netlist.cpp  Def2Netlist.h  Netlist.cpp  Netlist.h  NetlistStdCell2LibraryMapping.cpp  NetlistStdCell2LibraryMapping.h  Verilog2Netlist.cpp  Verilog2Netlist.h
ophidian/design/: CMakeLists.txt  Design.cpp  Design.h  DesignBuilder.cpp  DesignBuilder.h
ophidian/entity_system/: EntitySystem.h
ophidian/floorplan/: Floorplan.h
ophidian/geometry/: Models.h
ophidian/legalization/: Abacus.cpp  Abacus.h  AbacusPlaceRow.cpp  AbacusPlaceRow.h  BinDecomposition.cpp  BinDecomposition.h  CMakeLists.txt  CellAlignment.cpp  CellAlignment.h  CellByCellLegalization.cpp  CellByCellLegalization.h  CellLegalizer.cpp  CellLegalizer.h  CellShifting.cpp  CellShifting.h  CheckPerturbation.cpp  CheckPerturbation.h  ConstraintGraph.cpp  ConstraintGraph.h  FenceRegionIsolation.cpp  FenceRegionIsolation.h  GreedyRowAssignment.cpp  GreedyRowAssignment.h  ILPLegalization.cpp  ILPLegalization.h  ILPLegalizationWithConstraintGraph.cpp  ILPLegalizationWithConstraintGraph.h  KDtreeLegalization.cpp  KDtreeLegalization.h  LegalizationCheck.cpp  LegalizationCheck.h  LegalizationFixing.cpp  LegalizationFixing.h  LegalizationKDtree.cpp  LegalizationKDtree.h  MixedRowAssignment.cpp  MixedRowAssignment.h  MultirowAbacus.cpp  MultirowAbacus.h  MultirowLegalization.cpp  (+23 more)
ophidian/lut/: 2dLUT.cpp
ophidian/parser/: Def.cpp  Def.h  Lef.cpp  Lef.h  ParserException.h
ophidian/placement/: CMakeLists.txt  Def2Fence.cpp  Def2Fence.h  Def2Placement.cpp  Def2Placement.h  Fences.cpp  Fences.h  Lef2Library.cpp  Library.cpp  Library.h  Placement.cpp  Placement.h  PlacementMapping.cpp  PlacementMapping.h
ophidian/util/: CMakeLists.txt  Debug.cpp  Debug.h  GraphOperations.h  KDtree.h  Units.h
regression/: CMakeLists.txt
regression/density/: abu_test.cpp
src/clock_tree_synthesis/: CMakeLists.txt  clock_topology.cpp  clock_topology.h  clock_tree_algorithm.cpp  clock_tree_algorithm.h  clock_tree_definition.h  deffered_merge_embedding.cpp  deffered_merge_embedding.h  delay_capacitance_map.cpp  delay_capacitance_map.h  embedding.cpp  embedding.h  method_of_means_and_medians.cpp  method_of_means_and_medians.h  topology.cpp  topology.h
src/floorplan/: floorplan.cpp  floorplan.h
src/legalization/: legalization.cpp  legalization.h  legalization_check.h  subrows.cpp  subrows.h
src/legalization/algorithms/: CMakeLists.txt  abacus.cpp  abacus.h  cells.h  subrows.h
src/timing-driven_placement/: timingdriven_placement.cpp  timingdriven_placement.h
test/: CMakeLists.txt
test/circuit/: def2netlist_test.cpp  netliststdcell2librarymapping_test.cpp  netliststdcell2librarymapping_test.h  verilog2netlist_test.cpp
test/clock_tree_synthesis/: method_of_means_and_medians_test.cpp  trr_intersection_test.cpp
test/density/: abu_test.cpp
test/floorplan/: lefdef2floorplan_test.cpp
test/input_files/: simple.def
test/legalization/: RectilinearFenceFixture.cpp  RectilinearFenceFixture.h  RowAssignmentFixture.cpp  RowAssignmentFixture.h  abacus_test.cpp  bin_decomposition_test.cpp  cell_alignment_test.cpp  cell_shifthing_test.cpp  check_perturbation_test.cpp  constraint_graph_test.cpp  ilp_legalization_test.cpp  ilp_legalization_with_constraint_graph_test.cpp  legalization_check_test.cpp  legalizationfixture.cpp  legalizationfixture.h  multirow_abacus_test.cpp  multirow_legalization_test.cpp  rectilinear_fences_test.cpp  rowassignmenttest.cpp  rtree_legalization_test.cpp  separate_cells_into_boxes_test.cpp  subrows_test.cpp  unconstrained_ilp_legalization_test.cpp
(+13 files in other folders)
